--- a/weeklies/twit-2024-11-25.html
+++ b/weeklies/twit-2024-11-25.html
@@ -15,7 +15,7 @@ intentional or aggressive, respectively. As always, let me know if you found thi
 There's currently a lot of movement going on in the Tetris world as we enter the offseason, so to speak. A lot of players are getting busy at school and/or need a break. Meanwhile, there are other players who've risen meteorically to the top; this gave room for a lot of upsets and unexpected names appearing. Two of those players who've risen to prominence, of course, are meme and TetrisTime. TetrisTime had a much better showing in CTL than in these matches, but even then, meme's improvement has been so rapid recently that she was the clear favorite. No surprises here; TetrisTime simply couldn't get much killscreen play going and topped out rather early on 29 both games.
 </p>
 <p>
-Nek0 is another player who's risen to the top recently, bursting onto the scene with an incredibly strong August performance and sticking around since. Neko versus Myles was one of the longer matches in the early rounds this month, and an upset win for the former. Myles took the first game with a rollover and a level 51, but Neko won via chasedowns in the two games after in a reverse sweep, taking Myles out to many people's surprise. Neko's run, however, then ended swiftly at the hands of meme; he couldn't get into the same groove that took him past level 50 and beyond in the previous match, and meme was able to outlast him both games.
+Nek0 is another player who's risen to the top recently, bursting onto the scene with an incredibly strong August performance and sticking around since. Nek0 versus Myles was one of the longer matches in the early rounds this month, and an upset win for the former. Myles took the first game with a rollover and a level 51, but Nek0 won via chasedowns in the two games after in a reverse sweep, taking Myles out to many people's surprise. Nek0's run, however, then ended swiftly at the hands of meme; he couldn't get into the same groove that took him past level 50 and beyond in the previous match, and meme was able to outlast him both games.
 </p>
 <p>
 As a whole, the best of three format adopted for these early rounds was quite brutal, and turned No Cap November into a much deadlier format than I had anticipated. At the time of writing, we've seen both semifinals of No Cap, and it definitely made a huge difference in terms of results, so it remains unknown what the optimal format for such a competition should have been. 
@@ -98,7 +98,7 @@ CTM November 2024 Masters Event Round 1 (Orange), November 17, 2024
 <b><span id="ctm-me-o3">
 CTM November 2024 Masters Event Round 2 (Orange), November 17, 2024
 </span></b><br>
-<b>8 MEME</b> def. <b>11 NEKO</b> (2-1)
+<b>8 MEME</b> def. <b>11 Nek0</b> (2-1)
 <br>
 <table><tbody>
 <tr>
@@ -641,7 +641,7 @@ CTL Season 27 Division 1A, November 24, 2024
 <h3>Division 1B</h3>
 
 <p>
-The clear shocker for 1B this week was Alex T getting swept by Sodium. Both players said in chat they were weeks out of practice, yet Sodium showed no rust whilst Alex was straight oxidized. The box score doesn't even do justice to how mediocre he played. Retrospectively, its strange to look back on these beatdowns on the world champion after how he returned to Prime Alex versus Scuti. Coupled with another disappointing NCN match vs dog, I don't regret ranking him at the edge the top 10 in the Premiere Poll (below iBall and even Dengler) per se, but its funny how quickly he has made these takes outdated. The rest of the subdivision went as expected, save for a pretty ugly set from nek0, that together with his loss to Redshurt don't particularly inspire confidence. 
+The clear shocker for 1B this week was Alex T getting swept by Sodium. Both players said in chat they were weeks out of practice, yet Sodium showed no rust whilst Alex was straight oxidized. The box score doesn't even do justice to how mediocre he played. Retrospectively, its strange to look back on these beatdowns on the world champion after how he returned to Prime Alex versus Scuti. Coupled with another disappointing NCN match vs dog, I don't regret ranking him at the edge the top 10 in the Premiere Poll (below iBall and even Dengler) per se, but it's funny how quickly he has made these takes outdated. The rest of the subdivision went as expected, save for a pretty ugly set from nek0, that together with his loss to Redshurt don't particularly inspire confidence. 
 <b>-stolenshortsword</b>
 </p>
 
