--- a/features/sonic-das-2024.html
+++ b/features/sonic-das-2024.html
@@ -352,7 +352,7 @@
   </li>
   <li>
     <a href="https://youtu.be/Ztm7BfQOi0s?t=12490">CTWC DAS Winners Finals - Gio vs Robin</a><br>
-    In his sets versus Micetro and Myles, Fractal has back-three-back maxouts in each set to sweep his opponents, shocking the world with what DAS can do.
+    A really close set featuring two of the best DAS players from Europe- and they played each other over three sets at CTWC DAS!
   </li>
   <li>
     <a href="https://youtu.be/29TXR-AkEw4?t=3">Jonas Cup Top 16 - Fractal vs Night</a><br>
